fixes tickets with long description break the layout

--- a/tracker/static-dev/scss/_main.scss
+++ b/tracker/static-dev/scss/_main.scss
@@ -17,3 +17,17 @@
 .content {
 	margin-top: 1rem;
 }
+
+.panel {
+
+	h5 {
+		height: 36px;
+		overflow: hidden;
+	}
+
+	.ticket-description {
+		height: 50px;
+		overflow: hidden;
+	}
+
+} 
